--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -350,22 +350,22 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   /*---------------------------------------
-      FEATURE              
+      tutorial              
   -----------------------------------------*/
 
-  #feature {
+  #tutorial {
     background: #ffffff;
   }
 
-  #feature .nav-tabs {
+  #tutorial .nav-tabs {
     border-bottom: 0;
   }
 
-  #feature .nav>li>a {
+  #tutorial .nav>li>a {
     padding: 8px 0;
   }
 
-  #feature .nav-tabs>li>a {
+  #tutorial .nav-tabs>li>a {
     color: #999999;
     font-size: 18px;
     border: 0;
@@ -374,22 +374,22 @@ http://www.tooplate.com/view/2106-soft-landing
     margin-right: 35px;
   }
 
-  #feature .nav-tabs>li.active>a, 
-  #feature .nav-tabs>li.active>a:focus, 
-  #feature .nav-tabs>li.active>a:hover {
+  #tutorial .nav-tabs>li.active>a, 
+  #tutorial .nav-tabs>li.active>a:focus, 
+  #tutorial .nav-tabs>li.active>a:hover {
     background: transparent;
     color: #202020;
     border-bottom: 3px solid #29ca8e;
   }
 
-  #feature .nav>li>a:focus, 
-  #feature .nav>li>a:hover {
+  #tutorial .nav>li>a:focus, 
+  #tutorial .nav>li>a:hover {
     background: transparent;
     border-bottom: 3px solid #29ca8e;
     color: #202020;
   }
 
-  #feature .tab-content {
+  #tutorial .tab-content {
     margin-top: 50px;
   }
 
@@ -401,7 +401,7 @@ http://www.tooplate.com/view/2106-soft-landing
     margin: 0 0 5px 0;
   }
 
-  .feature-image {
+  .tutorial-image {
     position: absolute;
     bottom: -27em;
   }
@@ -720,12 +720,12 @@ http://www.tooplate.com/view/2106-soft-landing
       padding-left: 15px;
     }
 
-    #feature .nav-tabs>li>a {
+    #tutorial .nav-tabs>li>a {
       font-size: 16px;
       margin-right: 20px;
     }
 
-    .feature-image {
+    .tutorial-image {
       bottom: -24em;
     }
 
@@ -770,7 +770,7 @@ http://www.tooplate.com/view/2106-soft-landing
       color: #656565;
     }
 
-    .feature-image {
+    .tutorial-image {
       position: relative;
       bottom: 0;
     }
