--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -409,10 +409,10 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   /*---------------------------------------
-      ABOUT              
+      team              
   -----------------------------------------*/
 
-  #about .col-md-4 {
+  #team .col-md-4 {
     margin: 0;
     padding: 0;
   }
@@ -473,64 +473,64 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   /*---------------------------------------
-      TESTIMONIAL           
+      tools           
   -----------------------------------------*/
 
-  #testimonial {
+  #tools {
     background: #ffffff;
   }
 
-  #testimonial .col-md-6 {
+  #tools .col-md-6 {
     margin: 0;
     padding: 0;
   }
 
-  #testimonial .section-title {
+  #tools .section-title {
     padding-bottom: 0;
   }
 
-  #testimonial h1 {
+  #tools h1 {
     color: #ffffff;
   }
 
-  .testimonial-image {
-    background: url('../images/testimonial-image.jpg') no-repeat center center;
+  .tools-image {
+    /*background: url('../images/Mike\ feedback.png') no-repeat center center*/
     background-size: cover;
     width: 100%;
     height: 65vh;
   }
 
-  .testimonial-info {
+  .tools-info {
     background: #202020;
     padding: 60px;
     height: 65vh;
   }
 
-  .testimonial-info h3 {
+  .tools-info h3 {
     color: #d9d9d9;
     font-style: italic;
     margin-top: 5px;
   }
 
-  .testimonial-info .item {
+  .tools-info .item {
     display: block;
     width: 100%;
   }
 
-  .testimonial-item {
+  .tools-item {
     margin: 20px 0;
   }
 
   .owl-carousel .owl-item img,
-  .testimonial-item img,
-  .testimonial-item h4 {
+  .tools-item img,
+  .tools-item h4 {
     color: #d9d9d9;
     display: inline-block;
     vertical-align: top;
   }
 
   .owl-carousel .owl-item img,
-  .testimonial-item img {
+  .tools-item img {
     border: 3px solid #ffffff;
     border-radius: 100px;
     width: 60px;
@@ -544,7 +544,7 @@ http://www.tooplate.com/view/2106-soft-landing
       PRICING             
   -----------------------------------------*/
 
-  #about .section-title,
+  #team .section-title,
   #pricing .section-title {
     text-align: center;
   }
@@ -775,7 +775,7 @@ http://www.tooplate.com/view/2106-soft-landing
       bottom: 0;
     }
 
-    #about .col-md-4:nth-child(3n) .team-thumb {
+    #team .col-md-4:nth-child(3n) .team-thumb {
       display: flex;
       -webkit-box-orient: vertical;
       flex-direction: column-reverse;
@@ -790,12 +790,12 @@ http://www.tooplate.com/view/2106-soft-landing
       border-bottom: 15px solid #ffffff;
     }
 
-    .testimonial-image,
-    .testimonial-info {
+    .tools-image,
+    .tools-info {
       height: 85vh;
     }
 
-    .testimonial-info {
+    .tools-info {
       padding: 30px;
     }
   }
@@ -818,8 +818,8 @@ http://www.tooplate.com/view/2106-soft-landing
       right: 0;
     }
 
-    .testimonial-image,
-    .testimonial-info {
+    .tools-image,
+    .tools-info {
       height: 65vh;
     }
   }
