--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -248,6 +248,15 @@ http://www.tooplate.com/view/2106-soft-landing
     padding-left: 22px;
   }
 
+  .custom-navbar1 .nav li a {
+    font-size: 16px;
+    font-weight: normal;
+    color: #202020;
+    padding-right: 22px;
+    padding-left: 22px;
+  }
+
+
   .custom-navbar .nav li a:hover {
     background: transparent;
     color: #29ca8e;
